done structuring website

--- a/testimonial.html
+++ b/testimonial.html
@@ -7,17 +7,11 @@
     <title>Testimonial</title>
     <link rel="stylesheet" href="./dist/style.css" />
   </head>
-  <style>
-    input[type="radio"] {
-      border: none;
-      accent-color: red;
-    }
-  </style>
+
   <body>
     <main>
       <div class="container">
-        What they’ve said
-
+        <h2>What they’ve said</h2>
         <img
           class="profile"
           src="./images/avatar-anisha.png"
