--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
     <title>Frontend Mentor | Manage landing page</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- scss link -->
+    <link rel="stylesheet" href="./dist/style.css" />
   </head>
   <body>
     <header>
@@ -44,62 +44,136 @@
     </header>
     <main>
       <div class="main-container">
-        <!--  -->
-        Bring everyone together to build better products.
-        <!--  -->
-        Manage makes it simple for software teams to plan day-to-day tasks while
-        keeping the larger team goals in view.
-        <!--  -->
-        Get Started
-        <!--  -->
-        What’s different about Manage?
-        <!--  -->
-        Manage provides all the functionality your team needs, without the
-        complexity. Our software is tailor-made for modern digital product
-        teams.
-        <!--  -->
-        01 Track company-wide progress See how your day-to-day tasks fit into
-        the wider vision. Go from tracking progress at the milestone level all
-        the way done to the smallest of details. Never lose sight of the bigger
-        picture again.
-        <!--  -->
-        02 Advanced built-in reports Set internal delivery estimates and track
-        progress toward company goals. Our customisable dashboard helps you
-        build out the reports you need to keep key stakeholders informed.
-        <!--  -->
-        03 Everything you need in one place Stop jumping from one service to
-        another to communicate, store files, track tasks and share documents.
-        Manage offers an all-in-one team productivity solution.
-        <!--  -->
-        What they’ve said
-        <!--  -->
-        Anisha Li “Manage has supercharged our team’s workflow. The ability to
-        maintain visibility on larger milestones at all times keeps everyone
-        motivated.”
-        <!--  -->
-        Ali Bravo “We have been able to cancel so many other subscriptions since
-        using Manage. There is no more cross-channel confusion and everyone is
-        much more focused.”
-        <!--  -->
-        Richard Watts “Manage allows us to provide structure and process. It
-        keeps us organized and focused. I can’t stop recommending them to
-        everyone I talk to!”
-        <!--  -->
-        Shanai Gough “Their software allows us to track, manage and collaborate
-        on our projects from anywhere. It keeps the whole team in-sync without
-        being intrusive.”
-        <!--  -->
-        Get Started
-        <!--  -->
-        Simplify how your team works today. Get Started
-        <!--  -->
-        Home Pricing Products About Us Careers Community Privacy Policy
-        <!--  -->
-        Updates in your inbox… Go
-        <!--  -->
-        Copyright 2020. All Rights Reserved
+        <section class="grid">
+          <div>
+            <h1>Bring everyone together to build better products.</h1>
+
+            <p>
+              Manage makes it simple for software teams to plan day-to-day tasks
+              while keeping the larger team goals in view.
+            </p>
+
+            <a href="">Get Started</a>
+          </div>
+          <div>
+            <img src="./images/illustration-intro.svg" alt="" />
+          </div>
+        </section>
+
+        <sectio class="grid">
+          <div>
+            <h2>What’s different about Manage?</h2>
+
+            <p>
+              Manage provides all the functionality your team needs, without the
+              complexity. Our software is tailor-made for modern digital product
+              teams.
+            </p>
+          </div>
+          <div>
+            <article>
+              01
+              <h3>Track company-wide progress</h3>
+              See how your day-to-day tasks fit into the wider vision. Go from
+              tracking progress at the milestone level all the way done to the
+              smallest of details. Never lose sight of the bigger picture again.
+            </article>
+
+            <article>
+              02
+              <h3>Advanced built-in reports</h3>
+              Set internal delivery estimates and track progress toward company
+              goals. Our customisable dashboard helps you build out the reports
+              you need to keep key stakeholders informed.
+            </article>
+
+            <article>
+              03
+              <h3>Everything you need in one place</h3>
+              Stop jumping from one service to another to communicate, store
+              files, track tasks and share documents. Manage offers an
+              all-in-one team productivity solution.
+            </article>
+          </div>
+        </sectio>
+
+        <section class="flex">
+          <h2>What they’ve said</h2>
+
+          <div class="testimonials">
+            <article>
+              <h5>Anisha Li</h5>
+              <p>
+                “Manage has supercharged our team’s workflow. The ability to
+                maintain visibility on larger milestones at all times keeps
+                everyone motivated.”
+              </p>
+            </article>
+
+            <article>
+              <h5>Ali Bravo</h5>
+              <p>
+                “We have been able to cancel so many other subscriptions since
+                using Manage. There is no more cross-channel confusion and
+                everyone is much more focused.”
+              </p>
+            </article>
+
+            <article>
+              <h5>Richard Watts</h5>
+              <p>
+                “Manage allows us to provide structure and process. It keeps us
+                organized and focused. I can’t stop recommending them to
+                everyone I talk to!”
+              </p>
+            </article>
+
+            <article hidden>
+              <h5>Shanai Gough</h5>
+              <p>
+                “Their software allows us to track, manage and collaborate on
+                our projects from anywhere. It keeps the whole team in-sync
+                without being intrusive.”
+              </p>
+            </article>
+          </div>
+
+          <a href="#"> Get Started</a>
+        </section>
+
+        <div class="simplify">
+          <h4>Simplify how your team works today.</h4>
+
+          <a href="#">Get Started</a>
+        </div>
       </div>
     </main>
+
+    <footer>
+      <section>
+        <div>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#"> Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div>
+          <form>
+            <label for="email" hidden>Email</label>
+            <input type="email" placeholder="Updates in your inbox…" />
+            <button>Go</button>
+          </form>
+          <p>Copyright 2020. All Rights Reserved</p>
+        </div>
+      </section>
+    </footer>
 
     <!-- <div class="attribution">
       Challenge by
