--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
           </ul>
         </nav>
 
-        <a href="#" class="get-started">Get Started</a>
+        <a href="#" class="get-started first">Get Started</a>
+        <button class="btn-mobile-nav">
+          <img
+            class="toggle-open"
+            src="./images/icon-hamburger.svg"
+            alt="Hamburger menu"
+          />
+          <img
+            class="toggle-close"
+            src="./images/icon-close.svg"
+            alt="Close icon"
+          />
+        </button>
       </div>
     </header>
     <main>
@@ -98,10 +110,11 @@
         </sectio>
 
         <section class="flex">
-          <h2>What they’ve said</h2>
+          <h2 class="testimonials-question">What they’ve said</h2>
 
           <div class="testimonials">
-            <article>
+            <article class="testimonials-profile">
+              <img src="./images/avatar-anisha.png" alt="" />
               <h5>Anisha Li</h5>
               <p>
                 “Manage has supercharged our team’s workflow. The ability to
@@ -110,7 +123,8 @@
               </p>
             </article>
 
-            <article>
+            <article class="testimonials-profile">
+              <img src="./images/avatar-ali.png" alt="" />
               <h5>Ali Bravo</h5>
               <p>
                 “We have been able to cancel so many other subscriptions since
@@ -119,7 +133,8 @@
               </p>
             </article>
 
-            <article>
+            <article class="testimonials-profile">
+              <img src="./images/avatar-richard.png" alt="" />
               <h5>Richard Watts</h5>
               <p>
                 “Manage allows us to provide structure and process. It keeps us
@@ -128,7 +143,8 @@
               </p>
             </article>
 
-            <article hidden>
+            <article class="testimonials-profile">
+              <img src="./images/avatar-shanai.png" alt="" />
               <h5>Shanai Gough</h5>
               <p>
                 “Their software allows us to track, manage and collaborate on
@@ -139,17 +155,19 @@
           </div>
 
           <div class="testimonials-mobile">
-            <img
-              class="profile"
-              src="./images/avatar-anisha.png"
-              alt="Testmonial profile"
-            />
-            <p class="name">Anisha Li</p>
-            <p class="comment">
-              “Manage has supercharged our team’s workflow. The ability to
-              maintain visibility on larger milestones at all times keeps
-              everyone motivated.”
-            </p>
+            <div class="card">
+              <img
+                class="profile"
+                src="./images/avatar-anisha.png"
+                alt="Testmonial profile"
+              />
+              <p class="name">Anisha Li</p>
+              <p class="comment">
+                “Manage has supercharged our team’s workflow. The ability to
+                maintain visibility on larger milestones at all times keeps
+                everyone motivated.”
+              </p>
+            </div>
             <form>
               <label hidden for="Anisha">Anisha Li</label>
               <input type="radio" name="testimonial" id="Anisha" checked />
@@ -166,9 +184,11 @@
         </section>
 
         <div class="simplify">
-          <h4>Simplify how your team works today.</h4>
+          <div class="simplify-container">
+            <h4 class="simplify-title">Simplify how your team works today.</h4>
 
-          <a href="#" class="get-started">Get Started</a>
+            <a href="#" class="get-started">Get Started</a>
+          </div>
         </div>
       </div>
     </main>
