Working in footer

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 everyone motivated.”
               </p>
             </div>
-            <form>
+            <form class="testimonials-form">
               <label hidden for="Anisha">Anisha Li</label>
               <input type="radio" name="testimonial" id="Anisha" checked />
               <label hidden for="Ali">Ali Bravo</label>
@@ -218,11 +218,11 @@
             <li><a href="#" class="footer-link"> Privacy Policy</a></li>
           </ul>
         </div>
-        <div>
-          <form>
+        <div class="email-form-container">
+          <form class="email-form">
             <label for="email" hidden>Email</label>
             <input type="email" placeholder="Updates in your inbox…" />
-            <button>Go</button>
+            <button class="go">Go</button>
           </form>
           <p class="copyright">Copyright 2020. All Rights Reserved</p>
         </div>
