done styling footer

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <div class="simplify-container">
             <h4 class="simplify-title">Simplify how your team works today.</h4>
 
-            <a href="#" class="get-started">Get Started</a>
+            <a href="#" class="get-started simplify-link">Get Started</a>
           </div>
         </div>
       </div>
@@ -195,8 +195,12 @@
 
     <footer class="footer">
       <section class="footer-container">
-        <div>
-          <img src="./images/logo-footer.svg" alt="Manage Logo" />
+        <div class="footer-logos">
+          <img
+            class="footer-logo"
+            src="./images/logo-footer.svg"
+            alt="Manage Logo"
+          />
           <div class="footer-socials">
             <img src="./images/icon-facebook.svg" alt="Facebook icon" />
             <img src="./images/icon-youtube.svg" alt="Youtube icon" />
