working in testimonial section

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="testimonials">
             <article class="testimonials-profile">
               <img src="./images/avatar-anisha.png" alt="" />
-              <h5>Anisha Li</h5>
+              <h5 class="testimonials-name">Anisha Li</h5>
               <p>
                 “Manage has supercharged our team’s workflow. The ability to
                 maintain visibility on larger milestones at all times keeps
@@ -125,7 +125,7 @@
 
             <article class="testimonials-profile">
               <img src="./images/avatar-ali.png" alt="" />
-              <h5>Ali Bravo</h5>
+              <h5 class="testimonials-name">Ali Bravo</h5>
               <p>
                 “We have been able to cancel so many other subscriptions since
                 using Manage. There is no more cross-channel confusion and
@@ -135,7 +135,7 @@
 
             <article class="testimonials-profile">
               <img src="./images/avatar-richard.png" alt="" />
-              <h5>Richard Watts</h5>
+              <h5 class="testimonials-name">Richard Watts</h5>
               <p>
                 “Manage allows us to provide structure and process. It keeps us
                 organized and focused. I can’t stop recommending them to
@@ -145,7 +145,7 @@
 
             <article class="testimonials-profile">
               <img src="./images/avatar-shanai.png" alt="" />
-              <h5>Shanai Gough</h5>
+              <h5 class="testimonials-name">Shanai Gough</h5>
               <p>
                 “Their software allows us to track, manage and collaborate on
                 our projects from anywhere. It keeps the whole team in-sync
