fixing the design layout

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <header>
       <div class="header-container">
-        <img src="./images/logo.svg" alt="" />
+        <img src="./images/logo.svg" alt="Manage logo" />
         <nav class="nav-main">
           <ul class="nav-list">
             <li><a href="#" class="nav-link">Pricing</a></li>
@@ -57,55 +57,80 @@
     <main>
       <div class="main-container">
         <section class="grid">
-          <div>
-            <h1>Bring everyone together to build better products.</h1>
+          <div class="grid-container">
+            <div>
+              <h1 class="main-title">
+                Bring everyone together to build better products.
+              </h1>
 
-            <p>
-              Manage makes it simple for software teams to plan day-to-day tasks
-              while keeping the larger team goals in view.
-            </p>
+              <p>
+                Manage makes it simple for software teams to plan day-to-day
+                tasks while keeping the larger team goals in view.
+              </p>
 
-            <a href="#" class="get-started">Get Started</a>
-          </div>
-          <div>
-            <img src="./images/illustration-intro.svg" alt="" />
+              <a href="#" class="get-started">Get Started</a>
+            </div>
+            <div>
+              <img src="./images/illustration-intro.svg" alt="" />
+            </div>
           </div>
         </section>
 
         <sectio class="grid">
-          <div>
-            <h2>What’s different about Manage?</h2>
+          <div class="grid-container">
+            <div>
+              <h2 class="manage-title">What’s different about Manage?</h2>
 
-            <p>
-              Manage provides all the functionality your team needs, without the
-              complexity. Our software is tailor-made for modern digital product
-              teams.
-            </p>
-          </div>
-          <div>
-            <article>
-              01
-              <h3>Track company-wide progress</h3>
-              See how your day-to-day tasks fit into the wider vision. Go from
-              tracking progress at the milestone level all the way done to the
-              smallest of details. Never lose sight of the bigger picture again.
-            </article>
+              <p>
+                Manage provides all the functionality your team needs, without
+                the complexity. Our software is tailor-made for modern digital
+                product teams.
+              </p>
+            </div>
+            <div>
+              <article class="manage-article">
+                <div class="manage-article-number">01</div>
+                <div>
+                  <h3 class="manage-article-title">
+                    Track company-wide progress
+                  </h3>
+                  <p>
+                    See how your day-to-day tasks fit into the wider vision. Go
+                    from tracking progress at the milestone level all the way
+                    done to the smallest of details. Never lose sight of the
+                    bigger picture again.
+                  </p>
+                </div>
+              </article>
 
-            <article>
-              02
-              <h3>Advanced built-in reports</h3>
-              Set internal delivery estimates and track progress toward company
-              goals. Our customisable dashboard helps you build out the reports
-              you need to keep key stakeholders informed.
-            </article>
+              <article class="manage-article">
+                <div class="manage-article-number">02</div>
+                <div>
+                  <h3 class="manage-article-title">
+                    Advanced built-in reports
+                  </h3>
+                  <p>
+                    Set internal delivery estimates and track progress toward
+                    company goals. Our customisable dashboard helps you build
+                    out the reports you need to keep key stakeholders informed.
+                  </p>
+                </div>
+              </article>
 
-            <article>
-              03
-              <h3>Everything you need in one place</h3>
-              Stop jumping from one service to another to communicate, store
-              files, track tasks and share documents. Manage offers an
-              all-in-one team productivity solution.
-            </article>
+              <article class="manage-article">
+                <div class="manage-article-number">03</div>
+                <div>
+                  <h3 class="manage-article-title">
+                    Everything you need in one place
+                  </h3>
+                  <p>
+                    Stop jumping from one service to another to communicate,
+                    store files, track tasks and share documents. Manage offers
+                    an all-in-one team productivity solution.
+                  </p>
+                </div>
+              </article>
+            </div>
           </div>
         </sectio>
 
@@ -115,42 +140,50 @@
           <div class="testimonials">
             <article class="testimonials-profile">
               <img src="./images/avatar-anisha.png" alt="" />
-              <h5 class="testimonials-name">Anisha Li</h5>
-              <p>
-                “Manage has supercharged our team’s workflow. The ability to
-                maintain visibility on larger milestones at all times keeps
-                everyone motivated.”
-              </p>
+              <div class="testimonials-content">
+                <h5 class="testimonials-name">Anisha Li</h5>
+                <p class="testimonials-testimony">
+                  “Manage has supercharged our team’s workflow. The ability to
+                  maintain visibility on larger milestones at all times keeps
+                  everyone motivated.”
+                </p>
+              </div>
             </article>
 
             <article class="testimonials-profile">
               <img src="./images/avatar-ali.png" alt="" />
-              <h5 class="testimonials-name">Ali Bravo</h5>
-              <p>
-                “We have been able to cancel so many other subscriptions since
-                using Manage. There is no more cross-channel confusion and
-                everyone is much more focused.”
-              </p>
+              <div class="testimonials-content">
+                <h5 class="testimonials-name">Ali Bravo</h5>
+                <p class="testimonials-testimony">
+                  “We have been able to cancel so many other subscriptions since
+                  using Manage. There is no more cross-channel confusion and
+                  everyone is much more focused.”
+                </p>
+              </div>
             </article>
 
             <article class="testimonials-profile">
               <img src="./images/avatar-richard.png" alt="" />
-              <h5 class="testimonials-name">Richard Watts</h5>
-              <p>
-                “Manage allows us to provide structure and process. It keeps us
-                organized and focused. I can’t stop recommending them to
-                everyone I talk to!”
-              </p>
+              <div class="testimonials-content">
+                <h5 class="testimonials-name">Richard Watts</h5>
+                <p class="testimonials-testimony">
+                  “Manage allows us to provide structure and process. It keeps
+                  us organized and focused. I can’t stop recommending them to
+                  everyone I talk to!”
+                </p>
+              </div>
             </article>
 
             <article class="testimonials-profile">
               <img src="./images/avatar-shanai.png" alt="" />
-              <h5 class="testimonials-name">Shanai Gough</h5>
-              <p>
-                “Their software allows us to track, manage and collaborate on
-                our projects from anywhere. It keeps the whole team in-sync
-                without being intrusive.”
-              </p>
+              <div class="testimonials-content">
+                <h5 class="testimonials-name">Shanai Gough</h5>
+                <p class="testimonials-testimony">
+                  “Their software allows us to track, manage and collaborate on
+                  our projects from anywhere. It keeps the whole team in-sync
+                  without being intrusive.”
+                </p>
+              </div>
             </article>
           </div>
 
