working in navigation functionality

--- a/index.html
+++ b/index.html
@@ -1,277 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-    <title>Frontend Mentor | Manage landing page</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-    <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+  <title>Frontend Mentor | Manage landing page</title>
 
-    <!-- scss link -->
-    <link rel="stylesheet" href="./dist/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="header-container">
-        <img src="./images/logo.svg" alt="Manage logo" />
-        <nav class="nav-main">
-          <ul class="nav-list">
-            <li><a href="#" class="nav-link">Pricing</a></li>
-            <li><a href="#" class="nav-link">Product</a></li>
-            <li><a href="#" class="nav-link">About Us</a></li>
-            <li><a href="#" class="nav-link">Careers</a></li>
-            <li><a href="#" class="nav-link">Community</a></li>
-          </ul>
-        </nav>
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet" />
 
-        <a href="#" class="get-started first">Get Started</a>
-        <button class="btn-mobile-nav">
-          <img
-            class="toggle-open"
-            src="./images/icon-hamburger.svg"
-            alt="Hamburger menu"
-          />
-          <img
-            class="toggle-close"
-            src="./images/icon-close.svg"
-            alt="Close icon"
-          />
-        </button>
-      </div>
-    </header>
-    <main>
-      <div class="main-container">
-        <section class="grid">
-          <div class="grid-container">
-            <div>
-              <h1 class="main-title">
-                Bring everyone together to build better products.
-              </h1>
+  <!-- scss link -->
+  <link rel="stylesheet" href="./dist/style.css" />
+</head>
 
-              <p>
-                Manage makes it simple for software teams to plan day-to-day
-                tasks while keeping the larger team goals in view.
-              </p>
+<body>
+  <header>
+    <div class="header-container">
+      <img src="./images/logo.svg" alt="Manage logo" />
+      <nav class="nav-main">
+        <ul class="nav-list">
+          <li><a href="#" class="nav-link">Pricing</a></li>
+          <li><a href="#" class="nav-link">Product</a></li>
+          <li><a href="#" class="nav-link">About Us</a></li>
+          <li><a href="#" class="nav-link">Careers</a></li>
+          <li><a href="#" class="nav-link">Community</a></li>
+        </ul>
+      </nav>
 
-              <a href="#" class="get-started">Get Started</a>
-            </div>
-            <div>
-              <img src="./images/illustration-intro.svg" alt="" />
-            </div>
+      <a href="#" class="get-started first">Get Started</a>
+      <button class="btn-mobile-nav">
+        <img class="toggle-open" src="./images/icon-hamburger.svg" alt="Hamburger menu" />
+        <img class="toggle-close" src="./images/icon-close.svg" alt="Close icon" />
+      </button>
+    </div>
+  </header>
+  <main>
+    <div class="main-container">
+      <section class="grid">
+        <div class="grid-container flex-reverse">
+          <div>
+            <h1 class="main-title">
+              Bring everyone together to build better products.
+            </h1>
+
+            <p>
+              Manage makes it simple for software teams to plan day-to-day
+              tasks while keeping the larger team goals in view.
+            </p>
+
+            <a href="#" class="get-started">Get Started</a>
           </div>
-        </section>
-
-        <sectio class="grid">
-          <div class="grid-container">
-            <div>
-              <h2 class="manage-title">What’s different about Manage?</h2>
-
-              <p>
-                Manage provides all the functionality your team needs, without
-                the complexity. Our software is tailor-made for modern digital
-                product teams.
-              </p>
-            </div>
-            <div>
-              <article class="manage-article">
-                <div class="manage-article-number">01</div>
-                <div>
-                  <h3 class="manage-article-title">
-                    Track company-wide progress
-                  </h3>
-                  <p>
-                    See how your day-to-day tasks fit into the wider vision. Go
-                    from tracking progress at the milestone level all the way
-                    done to the smallest of details. Never lose sight of the
-                    bigger picture again.
-                  </p>
-                </div>
-              </article>
-
-              <article class="manage-article">
-                <div class="manage-article-number">02</div>
-                <div>
-                  <h3 class="manage-article-title">
-                    Advanced built-in reports
-                  </h3>
-                  <p>
-                    Set internal delivery estimates and track progress toward
-                    company goals. Our customisable dashboard helps you build
-                    out the reports you need to keep key stakeholders informed.
-                  </p>
-                </div>
-              </article>
-
-              <article class="manage-article">
-                <div class="manage-article-number">03</div>
-                <div>
-                  <h3 class="manage-article-title">
-                    Everything you need in one place
-                  </h3>
-                  <p>
-                    Stop jumping from one service to another to communicate,
-                    store files, track tasks and share documents. Manage offers
-                    an all-in-one team productivity solution.
-                  </p>
-                </div>
-              </article>
-            </div>
+          <div>
+            <img src="./images/illustration-intro.svg" alt="" />
           </div>
-        </sectio>
+        </div>
+      </section>
 
-        <section class="flex">
-          <h2 class="testimonials-question">What they’ve said</h2>
+      <sectio class="grid">
+        <div class="grid-container">
+          <div>
+            <h2 class="manage-title">What’s different about Manage?</h2>
 
-          <div class="testimonials">
-            <article class="testimonials-profile">
-              <img src="./images/avatar-anisha.png" alt="" />
-              <div class="testimonials-content">
-                <h5 class="testimonials-name">Anisha Li</h5>
-                <p class="testimonials-testimony">
-                  “Manage has supercharged our team’s workflow. The ability to
-                  maintain visibility on larger milestones at all times keeps
-                  everyone motivated.”
+            <p>
+              Manage provides all the functionality your team needs, without
+              the complexity. Our software is tailor-made for modern digital
+              product teams.
+            </p>
+          </div>
+          <div>
+            <article class="manage-article">
+              <div class="manage-article-number">01</div>
+              <div>
+                <h3 class="manage-article-title">
+                  Track company-wide progress
+                </h3>
+                <p>
+                  See how your day-to-day tasks fit into the wider vision. Go
+                  from tracking progress at the milestone level all the way
+                  done to the smallest of details. Never lose sight of the
+                  bigger picture again.
                 </p>
               </div>
             </article>
 
-            <article class="testimonials-profile">
-              <img src="./images/avatar-ali.png" alt="" />
-              <div class="testimonials-content">
-                <h5 class="testimonials-name">Ali Bravo</h5>
-                <p class="testimonials-testimony">
-                  “We have been able to cancel so many other subscriptions since
-                  using Manage. There is no more cross-channel confusion and
-                  everyone is much more focused.”
+            <article class="manage-article">
+              <div class="manage-article-number">02</div>
+              <div>
+                <h3 class="manage-article-title">
+                  Advanced built-in reports
+                </h3>
+                <p>
+                  Set internal delivery estimates and track progress toward
+                  company goals. Our customisable dashboard helps you build
+                  out the reports you need to keep key stakeholders informed.
                 </p>
               </div>
             </article>
 
-            <article class="testimonials-profile">
-              <img src="./images/avatar-richard.png" alt="" />
-              <div class="testimonials-content">
-                <h5 class="testimonials-name">Richard Watts</h5>
-                <p class="testimonials-testimony">
-                  “Manage allows us to provide structure and process. It keeps
-                  us organized and focused. I can’t stop recommending them to
-                  everyone I talk to!”
-                </p>
-              </div>
-            </article>
-
-            <article class="testimonials-profile">
-              <img src="./images/avatar-shanai.png" alt="" />
-              <div class="testimonials-content">
-                <h5 class="testimonials-name">Shanai Gough</h5>
-                <p class="testimonials-testimony">
-                  “Their software allows us to track, manage and collaborate on
-                  our projects from anywhere. It keeps the whole team in-sync
-                  without being intrusive.”
+            <article class="manage-article">
+              <div class="manage-article-number">03</div>
+              <div>
+                <h3 class="manage-article-title">
+                  Everything you need in one place
+                </h3>
+                <p>
+                  Stop jumping from one service to another to communicate,
+                  store files, track tasks and share documents. Manage offers
+                  an all-in-one team productivity solution.
                 </p>
               </div>
             </article>
           </div>
+        </div>
+      </sectio>
 
-          <div class="testimonials-mobile">
-            <div class="card">
-              <img
-                class="profile"
-                src="./images/avatar-anisha.png"
-                alt="Testmonial profile"
-              />
-              <p class="name">Anisha Li</p>
-              <p class="comment">
+      <section class="flex">
+        <h2 class="testimonials-question">What they’ve said</h2>
+
+        <div class="testimonials">
+          <article class="testimonials-profile">
+            <img src="./images/avatar-anisha.png" alt="" />
+            <div class="testimonials-content">
+              <h5 class="testimonials-name">Anisha Li</h5>
+              <p class="testimonials-testimony">
                 “Manage has supercharged our team’s workflow. The ability to
                 maintain visibility on larger milestones at all times keeps
                 everyone motivated.”
               </p>
             </div>
-            <form class="testimonials-form">
-              <label hidden for="Anisha">Anisha Li</label>
-              <input type="radio" name="testimonial" id="Anisha" checked />
-              <label hidden for="Ali">Ali Bravo</label>
-              <input type="radio" name="testimonial" id="Ali" />
-              <label hidden for="Richard">Richard Watts</label>
-              <input type="radio" name="testimonial" id="Richard" />
-              <label hidden for="Shanai">Shanai Gough</label>
-              <input type="radio" name="testimonial" id="Shanai" />
-            </form>
+          </article>
+
+          <article class="testimonials-profile">
+            <img src="./images/avatar-ali.png" alt="" />
+            <div class="testimonials-content">
+              <h5 class="testimonials-name">Ali Bravo</h5>
+              <p class="testimonials-testimony">
+                “We have been able to cancel so many other subscriptions since
+                using Manage. There is no more cross-channel confusion and
+                everyone is much more focused.”
+              </p>
+            </div>
+          </article>
+
+          <article class="testimonials-profile">
+            <img src="./images/avatar-richard.png" alt="" />
+            <div class="testimonials-content">
+              <h5 class="testimonials-name">Richard Watts</h5>
+              <p class="testimonials-testimony">
+                “Manage allows us to provide structure and process. It keeps
+                us organized and focused. I can’t stop recommending them to
+                everyone I talk to!”
+              </p>
+            </div>
+          </article>
+
+          <article class="testimonials-profile">
+            <img src="./images/avatar-shanai.png" alt="" />
+            <div class="testimonials-content">
+              <h5 class="testimonials-name">Shanai Gough</h5>
+              <p class="testimonials-testimony">
+                “Their software allows us to track, manage and collaborate on
+                our projects from anywhere. It keeps the whole team in-sync
+                without being intrusive.”
+              </p>
+            </div>
+          </article>
+        </div>
+
+        <div class="testimonials-mobile">
+          <div class="card">
+            <img class="profile" src="./images/avatar-anisha.png" alt="Testmonial profile" />
+            <p class="name">Anisha Li</p>
+            <p class="comment">
+              “Manage has supercharged our team’s workflow. The ability to
+              maintain visibility on larger milestones at all times keeps
+              everyone motivated.”
+            </p>
           </div>
+          <form class="testimonials-form">
+            <label hidden for="Anisha">Anisha Li</label>
+            <input type="radio" name="testimonial" id="Anisha" checked />
+            <label hidden for="Ali">Ali Bravo</label>
+            <input type="radio" name="testimonial" id="Ali" />
+            <label hidden for="Richard">Richard Watts</label>
+            <input type="radio" name="testimonial" id="Richard" />
+            <label hidden for="Shanai">Shanai Gough</label>
+            <input type="radio" name="testimonial" id="Shanai" />
+          </form>
+        </div>
 
-          <a href="#" class="get-started"> Get Started</a>
-        </section>
+        <a href="#" class="get-started"> Get Started</a>
+      </section>
 
-        <div class="simplify">
-          <div class="simplify-container">
-            <h4 class="simplify-title">Simplify how your team works today.</h4>
+      <div class="simplify">
+        <div class="simplify-container">
+          <h4 class="simplify-title">Simplify how your team works today.</h4>
 
-            <a href="#" class="get-started simplify-link">Get Started</a>
-          </div>
+          <a href="#" class="get-started simplify-link">Get Started</a>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <footer class="footer">
-      <section class="footer-container">
-        <div class="footer-logos">
-          <img
-            class="footer-logo"
-            src="./images/logo-footer.svg"
-            alt="Manage Logo"
-          />
-          <div class="footer-socials">
-            <img src="./images/icon-facebook.svg" alt="Facebook icon" />
-            <img src="./images/icon-youtube.svg" alt="Youtube icon" />
-            <img src="./images/icon-twitter.svg" alt="Twitter icon" />
-            <img src="./images/icon-pinterest.svg" alt="Pinterest icon" />
-            <img src="./images/icon-instagram.svg" alt="Instagram icon" />
-          </div>
+  <footer class="footer">
+    <section class="footer-container">
+      <div class="footer-logos">
+        <img class="footer-logo" src="./images/logo-footer.svg" alt="Manage Logo" />
+        <div class="footer-socials">
+          <img src="./images/icon-facebook.svg" alt="Facebook icon" />
+          <img src="./images/icon-youtube.svg" alt="Youtube icon" />
+          <img src="./images/icon-twitter.svg" alt="Twitter icon" />
+          <img src="./images/icon-pinterest.svg" alt="Pinterest icon" />
+          <img src="./images/icon-instagram.svg" alt="Instagram icon" />
         </div>
-        <div class="footer-links">
-          <ul class="footer-list">
-            <li><a href="#" class="footer-link">Home</a></li>
-            <li><a href="#" class="footer-link">Pricing</a></li>
-            <li><a href="#" class="footer-link">Products</a></li>
-            <li><a href="#" class="footer-link">About Us</a></li>
-          </ul>
-          <ul class="footer-list">
-            <li><a href="#" class="footer-link">Careers</a></li>
-            <li><a href="#" class="footer-link">Community</a></li>
-            <li><a href="#" class="footer-link"> Privacy Policy</a></li>
-          </ul>
-        </div>
-        <div class="email-form-container">
-          <form class="email-form">
-            <label for="email" hidden>Email</label>
-            <input type="email" placeholder="Updates in your inbox…" />
-            <button class="go">Go</button>
-          </form>
-          <p class="copyright">Copyright 2020. All Rights Reserved</p>
-        </div>
-      </section>
-    </footer>
+      </div>
+      <div class="footer-links">
+        <ul class="footer-list">
+          <li><a href="#" class="footer-link">Home</a></li>
+          <li><a href="#" class="footer-link">Pricing</a></li>
+          <li><a href="#" class="footer-link">Products</a></li>
+          <li><a href="#" class="footer-link">About Us</a></li>
+        </ul>
+        <ul class="footer-list">
+          <li><a href="#" class="footer-link">Careers</a></li>
+          <li><a href="#" class="footer-link">Community</a></li>
+          <li><a href="#" class="footer-link"> Privacy Policy</a></li>
+        </ul>
+      </div>
+      <div class="email-form-container">
+        <form class="email-form">
+          <label for="email" hidden>Email</label>
+          <input type="email" placeholder="Updates in your inbox…" />
+          <button class="go">Go</button>
+        </form>
+        <p class="copyright">Copyright 2020. All Rights Reserved</p>
+      </div>
+    </section>
+  </footer>
 
-    <script src="./js/testimonial.js"></script>
-    <!-- <div class="attribution">
+  <!-- overlay -->
+  <div class="overlay hidden"></div>
+  <script src="./js/testimonial.js"></script>
+  <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div> -->
-  </body>
+</body>
+
 </html>
